--- a/Projeto.Presentation.Mvc/Views/Produto/Consulta.cshtml
+++ b/Projeto.Presentation.Mvc/Views/Produto/Consulta.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Consulta de Produtos</title>
+    <link href="~/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
 </body>
