criando a parte de cadastro do Estoque

--- a/Projeto.Presentation.Mvc/Views/Estoque/Consulta.cshtml
+++ b/Projeto.Presentation.Mvc/Views/Estoque/Consulta.cshtml
@@ -1,16 +1,8 @@
 ﻿
 @{
-    Layout = null;
+    ViewData["Title"] = "Cadastro";
+    Layout = "~/Views/Shared/Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Consulta</title>
-    <link href="~/css/bootstrap.css" rel="stylesheet" />
-</head>
-<body>
-</body>
-</html>
+<h2>Consulta de Estoque</h2>
+<hr />
