--- a/Projeto.Presentation.Mvc/Views/Produto/Cadastro.cshtml
+++ b/Projeto.Presentation.Mvc/Views/Produto/Cadastro.cshtml
@@ -1,8 +1,9 @@
 ﻿
 @{
-    ViewData["Title"] = "Consulta";
+    ViewData["Title"] = "Cadastro";
     Layout = "~/Views/Shared/Layout.cshtml";
 }
+
 
 
 <h2>Consulta de Produtos</h2>
