--- a/Projeto.Presentation.Mvc/Views/Home/Index.cshtml
+++ b/Projeto.Presentation.Mvc/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
-    Layout = null;
+    ViewData["Title"] = "Home";
+    Layout = "~/Views/Shared/Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -15,10 +16,8 @@
 
     <h1>Controle de estoque</h1>
     <p>Seja bem vindo!</p>
-    <hr/>
+    <hr />
 
-    <a href="#" class="btn btn-primary">Gerenciar estoque</a>
-    <a href="#" class="btn btn-danger">Adicionar produtos</a>
 
     <script src="~/js/bootstrap.js"></script>
     <script src="~/js/jquery-3.5.1.min.js"></script>
