--- a/Projeto.Presentation.Mvc/Views/Estoque/Consulta.cshtml
+++ b/Projeto.Presentation.Mvc/Views/Estoque/Consulta.cshtml
@@ -1,8 +1,75 @@
-﻿
+﻿@model Projeto.Presentation.Mvc.Models.EstoqueConsultaModel
+
 @{
-    ViewData["Title"] = "Cadastro";
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
 <h2>Consulta de Estoque</h2>
 <hr />
+
+@using (Html.BeginForm())
+{
+    <label>Nome do Estoque: </label>
+    @Html.TextBoxFor(model => model.Nome, new
+    {
+        @class = "form-control col-md-4",
+        @autocomplete = "off",
+        @placeholder = "digite aqui o filtro de busca"
+    })
+
+    <span class="text-danger">
+        @Html.ValidationMessageFor(model => model.Nome)
+    </span>
+    <br />
+
+    <input type="submit" value="Pesquisar estoque" class="btn btn-success" />
+}
+
+<br />
+<br />
+
+@if (Model != null && Model.Estoques != null)
+{
+    if (Model.Estoques.Count > 0)
+    {
+        <table class="table table-bordered table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Código</th>
+                    <th>Nome do Estoque</th>
+                    <th>Data de criação</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Estoques)
+                {
+                    <tr>
+                        <td>@item.IdEstoque</td>
+                        <td>@item.Nome</td>
+                        <td>@item.DataCriacao</td>
+                        <td>
+                            <a href="/Estoque/Edicao/@item.IdEstoque" class="btn btn-primary btn-sm">
+                                Atualizar
+                            </a>
+                            <a href="/Estoque/Exclusao/@item.IdEstoque" class="btn btn-danger btn-sm"
+                               onclick="return confirm('Deseja Excluir este funcionário?');">
+                                Excluir
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="5">
+                        Quantidade de estoque: @Model.Estoques.Count
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
+    }
+    else
+    {
+        <span class="text-danger">Nenhum Estoque encontrado.</span>
+    }
+}
