criando parte de consulta e edicao do estoque

--- a/Projeto.Presentation.Mvc/Views/Estoque/Consulta.cshtml
+++ b/Projeto.Presentation.Mvc/Views/Estoque/Consulta.cshtml
@@ -38,6 +38,7 @@
                     <th>Código</th>
                     <th>Nome do Estoque</th>
                     <th>Data de criação</th>
+                    <th>Ações</th>
                 </tr>
             </thead>
             <tbody>
@@ -47,6 +48,7 @@
                         <td>@item.IdEstoque</td>
                         <td>@item.Nome</td>
                         <td>@item.DataCriacao</td>
+                        
                         <td>
                             <a href="/Estoque/Edicao/@item.IdEstoque" class="btn btn-primary btn-sm">
                                 Atualizar
