meu primeiro commit

--- a/Projeto.Presentation.Mvc/Views/Estoque/Consulta.cshtml
+++ b/Projeto.Presentation.Mvc/Views/Estoque/Consulta.cshtml
@@ -47,7 +47,7 @@
                     <tr>
                         <td>@item.IdEstoque</td>
                         <td>@item.Nome</td>
-                        <td>@item.DataCriacao</td>
+                        <td>@item.DataCriacao.ToString("dd/MM/yyyy")</td>
                         
                         <td>
                             <a href="/Estoque/Edicao/@item.IdEstoque" class="btn btn-primary btn-sm">
