--- a/Projeto.Presentation.Mvc/Views/Produto/Cadastro.cshtml
+++ b/Projeto.Presentation.Mvc/Views/Produto/Cadastro.cshtml
@@ -1,10 +1,53 @@
-﻿
+﻿@model Projeto.Presentation.Mvc.Models.ProdutoCadastroModel
+
 @{
-    ViewData["Title"] = "Cadastro";
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
-
-
-<h2>Consulta de Produtos</h2>
+<h2>Cadastro de Produtos</h2>
 <hr />
+
+@using (Html.BeginForm())
+{
+    <label>Nome do Produto:</label>
+    @Html.TextBoxFor(model => model.Nome,
+    new
+    {
+        @class = "form-control col-md-4",
+        @autocomplete = "off",
+        @placeholder = "Digite Aqui"
+    })
+    <span class="text-danger">
+        @Html.ValidationMessageFor(model => model.Nome)
+    </span>
+    <br />
+
+    <label>Preço do produto:</label>
+    @Html.TextBoxFor(model => model.Preco,
+    new
+    {
+        @class = "form-control col-md-4",
+        @autocomplete = "off",
+        @placeholder = "Digite Aqui"
+    })
+    <span class="text-danger">
+        @Html.ValidationMessageFor(model => model.Preco)
+    </span>
+    <br />
+
+    <label>Quantidade do Produto:</label>
+    @Html.TextBoxFor(model => model.Quantidade,
+    new
+    {
+        @class = "form-control col-md-4",
+        @autocomplete = "off",
+        @placeholder = "Digite Aqui"
+    })
+    <span class="text-danger">
+        @Html.ValidationMessageFor(model => model.Quantidade)
+    </span>
+    <br />
+
+    <input type="submit" value="Cadastrar Estoque"
+           class="btn btn-success" />
+}
